map alignment fix

--- a/assignments/weathersite/css/large.css
+++ b/assignments/weathersite/css/large.css
@@ -153,7 +153,7 @@ form input.submitBtn {
 /* -----------FOOTER-CONTACT------------- */
 footer section.contact {
   display: block;
-  grid-template-columns: auto;
+  grid-template-rows: auto;
   margin-top: 2%;
   height: 20rem;
 }
@@ -164,7 +164,7 @@ footer #contactInfoBox {
 footer section.contact div.map {
   width: 50%;
   float: right;
-  margin-top: -185px;
+  margin-top: -180px;
   margin-right: 100px;
 }
 
