--- a/assignments/weathersite/css/small.css
+++ b/assignments/weathersite/css/small.css
@@ -22,8 +22,6 @@ body {
 /*------------- HEADER-------------------- */
 
 .header {
-  /* padding: 2%; */
-  /* font-size: 1.8em; */
   width: 100%;
   background-color: #03808f;
   color: #e9e9e9;
@@ -97,7 +95,7 @@ header figure img {
 nav li {
   display: block;
   line-height: 44px;
-  font-size: 1em;
+  font-size: 1rem;
   text-transform: uppercase;
   border-bottom: 1px solid #808080;
   cursor: pointer;
@@ -126,7 +124,7 @@ main {
 }
 main h2 {
   color: #eb7903;
-  font-size: 24px;
+  font-size: 1.3rem;
   padding: 15px 0 15px 0;
   text-align: center;
 }
@@ -175,14 +173,14 @@ main img.stormHero {
   justify-self: center;
 }
 .weatherBox h3 {
-  font-size: 1em;
+  font-size: 1rem;
 }
 .weatherBox p {
-  font-size: 0.85em;
+  font-size: 0.85rem;
 }
 
 aside h3 {
-  font-size: 1.1em;
+  font-size: 1rem;
   color: #eb7903;
   text-decoration: underline;
 }
@@ -245,7 +243,7 @@ div#events {
   width: 100%;
 }
 .townArticle h2 {
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   text-align: left;
   margin-top: 0;
 }
@@ -257,7 +255,7 @@ div#events {
   font-family: "Montserrat", sans-serif;
   margin-top: 15px;
   line-height: 1.3em;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 .townArticle #more {
   display: none;
@@ -267,7 +265,7 @@ div#events {
   background-color: #808080;
   padding: 2px 5px;
   color: white;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 #articleImg {
   width: 100%;
@@ -433,8 +431,8 @@ footer section.contact iframe {
   /* margin-left: 2%; */
 }
 .contactText p {
-  line-height: 1.3em;
-  font-size: 0.9em;
+  line-height: 1.3rem;
+  font-size: 0.9rem;
 }
 #socialMedia {
   padding-top: 10px;
@@ -449,7 +447,7 @@ footer section.contact iframe {
 section.attributions {
   background-color: #404040;
   color: #e9e9e9;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: center;
   height: 50px;
   padding: 20px;
@@ -458,7 +456,7 @@ section.attributions {
 section.attributions p {
   text-align: center;
   margin-top: 0;
-  font-size: 11px;
+  font-size: 0.9rem;
 }
 section.attributions a {
   /* text-decoration: none; */
@@ -519,8 +517,8 @@ figure img {
 }
 .towncard h3 {
   font-style: italic;
-  font-size: 1em;
-  color: #716f6f;
+  font-size: 1rem;
+  color: #404040;
   margin: 5px 0;
 }
 
@@ -548,12 +546,12 @@ figure img {
 
 .towncard article {
   text-align: center;
-  color: #716f6f;
+  color: #404040;
   margin: 15px 8px;
   line-height: 1.5em;
 }
 .towncard hr {
-  background-color: #716f6f;
+  background-color: #404040;
   width: 90%;
   margin: 0 auto;
   opacity: 0.5;
